# ILI9341-Raspberry-Pi-Pico-2

./: README.md
ILI9341-Raspberry-Pi-Pico-2/include/ImageReader/: ImageReader.h
ILI9341-Raspberry-Pi-Pico-2/src/: ILI9341.c
examples/ImageReader/: CMakeLists.txt  hw_config.c  main.c  pico_sdk_import.cmake
examples/audio/: CMakeLists.txt  main.c
examples/demo/: CMakeLists.txt  main.c
examples/fade/: CMakeLists.txt  hw_config.c  main.c
include/: ILI9341.h  ILI9341_hw.h  fileread.h  i2s.h
include/ImageReader/: ImageReader.c  ImageReader.h
include/i2sPlayer/: i2sPlayer.h
src/: CMakeLists.txt  ILI9341.c  ImageReader.c  fileread.c  i2s.c  i2s.pio  i2sPlayer.c
